[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/github-integration/fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icons/settings-icon-16.png" type="Texture" id=2]
[ext_resource path="res://scenes/hud/MiniSettings.gd" type="Script" id=3]
[ext_resource path="res://icons/ticker.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.964706, 0.0627451, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.027451, 0.027451, 0.027451, 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="MiniSettings" type="Node2D"]
script = ExtResource( 3 )

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 718.0
margin_top = 12.0
margin_right = 1038.0
margin_bottom = 332.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 2 )

[node name="SettingsPanel" type="PopupPanel" parent="."]
pause_mode = 2
visible = true
margin_left = 300.0
margin_top = 480.0
margin_right = 832.0
margin_bottom = 1012.0
rect_min_size = Vector2( 532, 532 )
custom_styles/panel = SubResource( 1 )

[node name="Title" type="RichTextLabel" parent="SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 522.0
margin_bottom = 522.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=black][center]Settings"
text = "Settings"

[node name="Music Volume" type="RichTextLabel" parent="SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 522.0
margin_bottom = 522.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=black]Music Volume"
text = "Music Volume"

[node name="musicSlider" type="HSlider" parent="SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 522.0
margin_bottom = 522.0
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
min_value = -60.0
max_value = 0.0
step = 5.0
tick_count = 2
ticks_on_borders = true

[node name="Sound Effects Volume" type="RichTextLabel" parent="SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 522.0
margin_bottom = 522.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=black]Sound Effects Volume
"
text = "Sound Effects Volume
"

[node name="soundEffectsSlider" type="HSlider" parent="SettingsPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 522.0
margin_bottom = 522.0
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
min_value = -60.0
max_value = 0.0
step = 5.0
tick_count = 2
ticks_on_borders = true

[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="popup_hide" from="SettingsPanel" to="." method="_on_SettingsPanel_popup_hide"]
[connection signal="drag_ended" from="SettingsPanel/musicSlider" to="." method="_on_musicSlider_drag_ended"]
[connection signal="drag_ended" from="SettingsPanel/soundEffectsSlider" to="." method="_on_soundEffectsSlider_drag_ended"]
